# rasptele

./: .dockerignore  .env.example  .gitignore  .release-it.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  SUPPORT.md  compose.coolify.yaml  compose.portainer.yaml  compose.yaml  config.example.yaml  idea.md  package-lock.json  package.json  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  support_question.yml
.github/workflows/: ci.yml  release.yml
docs/: configuration.md  deployment.md  getting-started.md  operations.md  releasing.md
docs/plans/: 2026-07-18-pihole-v6-design.md
src/rasptele/: __init__.py  bot.py  config.py  guard.py  main.py  monitor.py  pihole.py  store.py  watchdog.py
tests/: test_config_and_store.py  test_guard_and_watchdog.py  test_monitor_and_bot.py  test_pihole.py  test_pihole_bot.py  test_pihole_integration.py  test_pihole_monitor.py
