[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rasptele"
version = "0.1.0"
description = "A secure Telegram control plane for a Raspberry Pi Docker server"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.7,<4",
  "docker>=7,<8",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "psutil>=5.9,<7",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
rasptele = "rasptele.main:main"
rasptele-docker-guard = "rasptele.guard:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
