[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rasptele"
version = "0.2.0"
description = "A secure Telegram control plane for a Raspberry Pi Docker server"
readme = "README.md"
license = {file = "LICENSE"}
authors = [{name = "Dhruv Jain"}]
requires-python = ">=3.11"
keywords = ["docker", "homelab", "monitoring", "raspberry-pi", "telegram-bot"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: No Input/Output (Daemon)",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Home Automation",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "aiogram>=3.7,<4",
  "docker>=7,<8",
  "fastapi>=0.110,<1",
  "httpx>=0.27,<1",
  "psutil>=5.9,<7",
  "PyYAML>=6,<7",
  "uvicorn[standard]>=0.27,<1",
]

[project.scripts]
rasptele = "rasptele.main:main"
rasptele-docker-guard = "rasptele.guard:main"

[project.urls]
Homepage = "https://github.com/maddhruv/rasptele"
Documentation = "https://github.com/maddhruv/rasptele#documentation"
Issues = "https://github.com/maddhruv/rasptele/issues"
Source = "https://github.com/maddhruv/rasptele"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
